dnl Process this file with autoconf to produce a configure script.
AC_PREREQ(2.59)
AC_INIT([openfm],[0.5],[php-coder at altlinux.ru])
AC_CONFIG_SRCDIR([src/openfm.c])
AM_INIT_AUTOMAKE([dist-bzip2 no-dist-gzip])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

AC_CONFIG_FILES([Makefile
                 src/Makefile])

AC_OUTPUT
