dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([OpenFM],[0.5],[php-coder at altlinux.ru],[openfm])
AC_CONFIG_SRCDIR([src/openfm.c])
AM_INIT_AUTOMAKE

# Determine a C compiler to use. If CC is not already set in the
# environment, check for gcc and cc, then for other C compilers. Set
# output variable CC to the name of the compiler found.
AC_PROG_CC

# If the C compiler does not fully support the ANSI C qualifier const,
# define const to be empty.
AC_C_CONST

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT
