dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT([OpenFM],[0.5],[php-coder at altlinux.ru],[openfm])
AC_CONFIG_SRCDIR([src/openfm.c])
AC_CONFIG_HEADERS([config.h])
AM_INIT_AUTOMAKE

# Determine a C compiler to use. If CC is not already set in the
# environment, check for gcc and cc, then for other C compilers. Set
# output variable CC to the name of the compiler found.
AC_PROG_CC

# If the C compiler does not fully support the ANSI C qualifier const,
# define const to be empty.
AC_C_CONST

# Set default flags for compiler
CFLAGS="-W -Wall"

AC_MSG_CHECKING(localization support)
AC_ARG_ENABLE(nls,
    AS_HELP_STRING([--disable-nls], [disable localization]),
    [enable_nls=no],
    [enable_nls=yes])
AC_MSG_RESULT($enable_nls)
if test "x$enable_nls" = "xyes"; then
   AC_DEFINE([NLS], [], [Localization support])
fi

AC_CONFIG_FILES(Makefile src/Makefile tests/Makefile)
AC_OUTPUT
